# atext

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.e2e.yml  pyproject.toml  render.yaml
agents/: roles-bundle.json
agents/roles/: consultant.md  operations.md
agents/souls/coordinator/decisions/: 2026-06-14-atext-canonical-reshape.md  2026-06-15-folio-greenfield-single-migration.md  2026-06-16-folio-aw-verbs-via-manifest-not-binary.md  2026-06-17-folio-app-emit-custody-v1-in-process.md  2026-06-18-folio-wake-three-surfaces-live-proven.md  2026-06-19-engineering-pack-product-authoring.md  2026-06-19-library-model-v2-public-packs-private-shelves.md  2026-06-19-library-profile-visibility-and-continuous-improvement.md  2026-06-21-asset-scoped-profile-evolution.md  2026-06-21-pack-to-blueprint-rename.md  2026-06-22-aweb-operations-and-skill-sync.md  2026-06-24-linear-naapp-scope.md  2026-07-02-aweb-team-default-public-blueprint.md  2026-07-10-approval-authority-follows-context.md
agents/souls/coordinator/docs/: awid-registry-incidents.md  linear-naapp-sot.md  skill-authoring-spec.md
agents/souls/coordinator/memory/: MEMORY.md  ai-aweb-repo-key-exposure-incident.md  aw-materializer-multibyte-utf8-bug.md  aweb-mail-waf-blocks-security-jargon.md  browser-features-verify-against-running-instance.md  engineering-pack-home.md  folio-golive-delegated.md  instance-worktrees-need-explicit-push.md  instances-process-queued-mail-despite-no-heartbeat.md  log-awid-registry-503s.md  post-reboot-ssh-agent-empty.md  upcoming-marketing-blueprint.md  verify-main-worktree-before-merge.md
agents/souls/developer/docs/: README.md  profile-authority-fidelity.md
agents/souls/developer/memory/: MEMORY.md  aweb-command-flows-verify-by-execution.md  aweb-css-generic-class-collisions.md  naapp-getting-started-invariant.md  naapp-page-preview-without-db.md  push-branch-before-handoff.md
agents/souls/operations/: AGENTS.md  soul.yaml
docs/: agent-first.md  billing-probe.md  sot.md
site/: hugo.toml
site/assets/css/: aweb.css  site.css
site/content/: _index.md
site/content/docs/: _index.md  errors.md  trust.md  tutorial.md
site/layouts/: index.html
site/layouts/_default/: baseof.html  list.html  single.html
site/layouts/docs/: trust.html
site/layouts/partials/: copy-icon.html  site-footer.html  site-head.html  site-header.html
site/static/: llms.txt
skills/agent-first-app/: SKILL.md
skills/byot-e2e-validation/: SKILL.md
skills/present-to-human/: SKILL.md
skills/set-theme/: SKILL.md
skills/team-cert-verification/: SKILL.md
src/atext/: api.py  auth.py  billing.py  cli.py  config.py  db.py  models.py  presentation.py  repository.py
src/atext/migrations/: 001_initial.sql  002_subscriptions.sql  003_presentation_links.sql  003_subscription_event_order.sql  004_themes.sql
tests/: billing_events.py  test_auth_certificate.py  test_auth_v2_envelope.py  test_billing_caps.py  test_billing_stripe.py  test_db_config.py  test_e2e_present.py  test_e2e_smoke.py  test_e2e_team_isolation.py  test_e2e_theme.py  test_presentation_rendering.py  test_theme_logo_validation.py
