[project]
name = "atext"
version = "0.1.0"
description = "Team-scoped plain-text document versioning for agents authenticated with AWID team certificates"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "aweb.ai", email = "hello@aweb.ai" }]
requires-python = ">=3.12"
keywords = ["agents", "awid", "byot", "text", "version-control"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "awid-service==0.5.12",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "markdown>=3.8.2",
  "nh3>=0.3.2",
  "pgdbm==0.4.1",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "pynacl>=1.6.2",
  "uvicorn[standard]>=0.35.0",
]

[project.urls]
Homepage = "https://github.com/awebai/atext"
Repository = "https://github.com/awebai/atext"
Issues = "https://github.com/awebai/atext/issues"

[project.scripts]
atext = "atext.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atext"]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=1.2.0",
  "ruff>=0.14.0",
  "mypy>=1.18.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "e2e: docker-backed end-to-end tests using real aw/awid tooling",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
ignore_missing_imports = true
warn_unused_configs = true
